--- a/contact.html
+++ b/contact.html
@@ -471,7 +471,7 @@
       <div class="container">
         <hr>
         <div class="main-footer--border" style="text-align:center;padding-bottom: 15px;">
-          <p>Copyright © 2019 <a href="https://runner-inn.myharavan.com"> ShoeMe</a>. <a target="_blank"
+          <p>Được sản xuất © 2019 <a href="https://runner-inn.myharavan.com"> Runner Inn</a>. <a target="_blank"
               href="https://www.facebook.com/henrynguyen202">Powered by HuniBlue</a></p>
         </div>
       </div>
