--- a/contact.html
+++ b/contact.html
@@ -121,6 +121,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="Contact.html">LIÊN HỆ</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="DanhSach.html">DANH SÁCH</a>
+              </li>
             </ul>
           </div>
 
