--- a/DanhSach.html
+++ b/DanhSach.html
@@ -268,8 +268,48 @@
             background-color: #f2f2f2;
         }
     </style>
+
+  <style>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+        th, td {
+            padding: 10px;
+            border: 1px solid #ddd;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+    </style>
+    <body>
+    <h1 style="text-align: center;">Danh sách nhân viên</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>STT</th>
+                <th>Họ tên</th>
+                <th>Email</th>
+                <th>Số điện thoại</th>
+                <th>Ngày làm việc</th>
+                <th>Trạng thái</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Lê Bình Dương</td>
+                <td>Hihihi@gmail.com</td>
+                <td>0901234567</td>
+                <td>2019-05-19</td>
+                <td>Đã kích hoạt</td>
+            </tr>
+            </tbody>
+    </table>
+</body>
   <body>
-    <h1>Danh sách khách hàng</h1>
+    <h1 style="text-align: center;">Danh sách khách hàng</h1>
     <table>
         <thead>
             <tr>
@@ -311,7 +351,7 @@
                 <td>Hoàng Hải Đăng</td>
                 <td>Dăngjh@gmail.com</td>
                 <td>0901234283</td>
-                <td>2022-05-01</td>
+                <td>2022-05-02</td>
                 <td>Đã kích hoạt</td>
             </tr>
             <tr>
