--- a/detailproduct.html
+++ b/detailproduct.html
@@ -78,6 +78,9 @@
           <li class="nav-item">
             <a class="nav-link" href="Contact.html">LIÊN HỆ</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="DanhSach.html">DANH SÁCH</a>
+          </li>
         </ul>
       </div>
       <div id="offcanvas-flip1" uk-offcanvas="flip: true; overlay: true">
@@ -977,8 +980,8 @@
       <div class="container">
         <hr>
         <div class="main-footer--border" style="text-align:center;padding-bottom: 15px;">
-          <p>Copyright © 2019 <a href="https://runner-inn.myharavan.com">
-              ShoeMe</a>. <a target="_blank" href="https://www.facebook.com/henrynguyen202">Powered by
+          <p>Được sản xuất © 2019 <a href="https://runner-inn.myharavan.com">
+              Runner Inn</a>. <a target="_blank" href="https://www.facebook.com/henrynguyen202">Powered by
               HuniBlue</a></p>
         </div>
       </div>
