--- a/blog.html
+++ b/blog.html
@@ -72,7 +72,7 @@
           <li class="nav-item">
             <a class="nav-link" href="introduce.html">GIỚI THIỆU</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="blog.html">BLOG</a>
           </li>
           <li class="nav-item">
@@ -641,15 +641,6 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-    <div class="main-footer--copyright">
-      <div class="container">
-        <hr>
-        <div class="main-footer--border" style="text-align:center;padding-bottom: 15px;">
-          <p>Được sản xuất © 2019 <a href="https://runner-inn.myharavan.com"> Runner Inn</a>. <a target="_blank"
-              href="https://www.facebook.com/henrynguyen202">Powered by HuniBlue</a></p>
         </div>
       </div>
     </div>
