--- a/DanhSach.html
+++ b/DanhSach.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="plugins/uikit/uikit.min.css" />
 
 
-  <title>Danh Sách Khách Hàng</title>
+  <title>Tất cả sản phẩm</title>
 
 </head>
 
@@ -33,7 +33,6 @@
   </div>
 
   <!--Navbar-->
-
   <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
 
     <div class="container">
@@ -43,33 +42,33 @@
       <div class="desk-menu collapse navbar-collapse justify-content-md-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="home.html">TRANG CHỦ</a>
+            <a class="nav-link" href="index.html">TRANG CHỦ</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="product.html">BỘ SƯU TẬP</a>
           </li>
-          <li class="nav-item">
-              <a class="nav-link" href="detailproduct.html">SẢN PHẨM
-                <i class="fa fa-chevron-down" aria-hidden="true"></i>
-              </a>
-              <ul class="sub_menu">
-                <li class="">
-                  <a href="detailproduct.html" title="Sản phẩm - Style 1"> 
-                    Sản phẩm - Style 1
-                  </a>
-                </li>
-                <li class="">
-                  <a href="detailproduct.html" title="Sản phẩm - Style 2"> 
-                    Sản phẩm - Style 2
-                  </a>
-                </li>
-                <li class="">
-                  <a href="detailproduct.html" title="Sản phẩm - Style 3"> 
-                    Sản phẩm - Style 3
-                  </a>
-                </li>
-              </ul>
-            </li>
+          <li class="nav-item lisanpham">
+            <a class="nav-link" href="detailproduct.html">SẢN PHẨM
+              <i class="fa fa-chevron-down" aria-hidden="true"></i>
+            </a>
+            <ul class="sub_menu">
+              <li class="">
+                <a href="detailproduct.html" title="Sản phẩm - Style 1"> 
+                  Sản phẩm - Style 1
+                </a>
+              </li>
+              <li class="">
+                <a href="detailproduct.html" title="Sản phẩm - Style 2"> 
+                  Sản phẩm - Style 2
+                </a>
+              </li>
+              <li class="">
+                <a href="detailproduct.html" title="Sản phẩm - Style 3"> 
+                  Sản phẩm - Style 3
+                </a>
+              </li>
+            </ul>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="introduce.html">GIỚI THIỆU</a>
           </li>
@@ -79,52 +78,53 @@
           <li class="nav-item">
             <a class="nav-link" href="contact.html">LIÊN HỆ</a>
           </li>
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="DanhSach.html">DANH SÁCH</a>
           </li>
         </ul>
       </div>
       <div id="offcanvas-flip1" uk-offcanvas="flip: true; overlay: true">
         <div class="uk-offcanvas-bar" style="background: white;
-        width: 350px;">
+        width: 100%;">
 
           <button class="uk-offcanvas-close" style="color:#272727" type="button" uk-close></button>
           <h3 style="font-size: 14px;
-                color: #272727;
-                text-transform: uppercase;
-                margin: 3px 0 30px 0;
-                font-weight: 500; letter-spacing: 2px;">MENU</h3>
-          <div class="justify-content-md-center">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">TRANG CHỦ</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Product.html">BỘ SƯU TẬP</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                  aria-haspopup="true" aria-expanded="false">
-                  Sản phẩm
+          color: #272727;
+          text-transform: uppercase;
+          margin: 3px 0 30px 0;
+          font-weight: 500; letter-spacing: 2px;">MENU</h3>
+            <div class="justify-content-md-center">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">TRANG CHỦ</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="Product.html">BỘ SƯU TẬP</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle aaaa"  href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false" >
+                    <p>SẢN PHẨM</p>
+                    <i class="fa fa-angle-double-right"></i>
 
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="border:0;">
-                  <a class="dropdown-item" href="detailproduct.html" title="Sản phẩm - Style 1">Sản phẩm - Style 1</a>
-                  <a class="dropdown-item" href="detailproduct.html" title="Sản phẩm - Style 2">Sản phẩm - Style 2</a>
-                  <a class="dropdown-item" href="detailproduct.html" title="Sản phẩm - Style 3">Sản phẩm - Style 3</a>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="introduce.html">GIỚI THIỆU</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="blog.html">BLOG</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Contact.html">LIÊN HỆ</a>
-              </li>
-            </ul>
-          </div>
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="border:0;">
+                    <a class="dropdown-item" href="detailproduct.html" title="Sản phẩm - Style 1">Sản phẩm - Style 1</a>
+                    <a class="dropdown-item" href="detailproduct.html" title="Sản phẩm - Style 2">Sản phẩm - Style 2</a>
+                    <a class="dropdown-item" href="detailproduct.html" title="Sản phẩm - Style 3">Sản phẩm - Style 3</a>
+                  </div>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="introduce.html">GIỚI THIỆU</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="blog.html">BLOG</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="Contact.html">LIÊN HỆ</a>
+                </li>
+              </ul>
+            </div>
 
         </div>
       </div>
@@ -154,8 +154,7 @@
             <div id="ajaxSearchResults" class="smart-search-wrapper ajaxSearchResults" style="display: none">
               <div class="resultsContent"></div>
             </div>
-          </div>  
-
+          </div>
         </div>
       </div>
       <div id="offcanvas-flip2" uk-offcanvas="flip: true; overlay: true">
@@ -208,6 +207,7 @@
           </div>
         </div>
       </div>
+
       <div class="icon-ol">
         <a style="color: #272727" href="">
           <i class="fas fa-user-alt"></i>
