--- a/detailproduct.html
+++ b/detailproduct.html
@@ -41,13 +41,13 @@
       </a>
       <div class="desk-menu collapse navbar-collapse justify-content-md-center" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="index.html">TRANG CHỦ</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Product.html">BỘ SƯU TẬP</a>
           </li>
-          <li class="nav-item lisanpham">
+          <li class="nav-item lisanpham active">
             <a class="nav-link" href="detailproduct.html">SẢN PHẨM
               <i class="fa fa-chevron-down" aria-hidden="true"></i>
             </a>
@@ -973,16 +973,6 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-    <div class="main-footer--copyright">
-      <div class="container">
-        <hr>
-        <div class="main-footer--border" style="text-align:center;padding-bottom: 15px;">
-          <p>Được sản xuất © 2019 <a href="https://runner-inn.myharavan.com">
-              Runner Inn</a>. <a target="_blank" href="https://www.facebook.com/henrynguyen202">Powered by
-              HuniBlue</a></p>
         </div>
       </div>
     </div>
