Giới thiệu chi tiết hơn

--- a/introduce.html
+++ b/introduce.html
@@ -114,7 +114,7 @@
                   <a class="dropdown-item" href="detailproduct.html" title="Sản phẩm - Style 3">Sản phẩm - Style 3</a>
                 </div>
               </li>
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link" href="introduce.html">GIỚI THIỆU</a>
               </li>
               <li class="nav-item">
@@ -450,10 +450,10 @@
               <div class="footer-content">
                 <div id="fb-root">
                   <div class="footer-static-content">
-                    <div class="fb-page" data-href="https://www.facebook.com/AziWorld-Viet-Nam-908555669481794/"
+                    <div class="fb-page" data-href="https://www.facebook.com/ah.duong.9484"
                       data-tabs="timeline" data-width="" data-height="215" data-small-header="false"
                       data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
-                      <blockquote cite="https://www.facebook.com/AziWorld-Viet-Nam-908555669481794/"
+                      <blockquote cite="https://www.facebook.com/ah.duong.9484"
                         class="fb-xfbml-parse-ignore"><a
                           href="https://www.facebook.com/ah.duong.9484">Duong Anh</a>
                     </div>
@@ -462,15 +462,6 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-    <div class="main-footer--copyright">
-      <div class="container">
-        <hr>
-        <div class="main-footer--border" style="text-align:center;padding-bottom: 15px;">
-          <p>Copyright © 2019 <a href="https://runner-inn.myharavan.com"> Runner Inn</a>. <a target="_blank"
-              href="https://www.facebook.com/henrynguyen202">Powered by HuniBlue</a></p>
         </div>
       </div>
     </div>
